src/objects/Section_Product_Link__c.object
<CustomObject>
    <description>Junction object between section and section product tables</description>
    <fields>
        <fullName>Base_or_Upgrade__c</fullName>
        <label>Base or Upgrade</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoverCode__c</fullName>
        <formula>Product__r.Cover_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cover Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_closed__c</fullName>
        <label>Date closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount_Funded__c</fullName>
        <label>Fixed Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GSPL_Number__c</fullName>
        <formula>Section__r.GroupSectionNumber__c &amp; &quot;-&quot; &amp; Product__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSPL Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Section__r.Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <formula>Section__r.Group__r.Is_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Version__c</fullName>
        <formula>Section__r.Group__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsPublishWizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Publish Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_Funded__c</fullName>
        <label>Percentage Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Product__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Broker_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Broker Code</label>
        <referenceTo>Broker_Code__c</referenceTo>
        <relationshipLabel>Section Product Links</relationshipLabel>
        <relationshipName>Section_Product_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_External_ID__c</fullName>
        <formula>Product__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>For Javascript calls</description>
        <formula>&quot;s&quot; &amp; Section__r.Section_Number__c &amp; &quot;p&quot; &amp; Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Product uId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Product_Name_Web__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Section_Product__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Section_Product_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Broker_Commision__c</fullName>
        <formula>Section__r.Broker_Code__r.Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Broker Commision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Section_Id__c</fullName>
        <description>ID for Javascript calls</description>
        <formula>Section__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <formula>Section__r.Section_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Section_Product_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SharedKey__c</fullName>
        <formula>Section__r.Group__r.Group_Number__c &amp; &quot;s&quot; &amp; Section__r.Section_Number__c &amp; &quot;pr&quot; &amp;  Product__r.Rate_Code__c</formula>
        <label>Shared Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
Section__r.Status__c == &apos;Draft&apos;, Section__r.Status__c,
IF(
Date_closed__c &lt;= TODAY(), &apos;Closed&apos;,
IF(
Product__r.Status__c = &apos;Component Withdrawn&apos;,&apos;Component Withdrawn&apos;,
IF(
Withdrawn_Date__c &lt;= TODAY(), &apos;Withdrawn&apos;,
IF(
Start_Date__c &gt; TODAY(), &apos;Pending&apos;,
Section__r.Status__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>Section__r.Group__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Date__c</fullName>
        <description>The date that the section product link is withdrawn (PLEASE NOTE that if a close date is specified, this takes precedence over Withdrawn date in calculating the status)</description>
        <inlineHelpText>The date that the section product link is withdrawn from</inlineHelpText>
        <label>Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <label>Section Product Link</label>
    <nameField>
        <label>Section Product Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Section Product Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Close_SPL_in_Draft_Only</fullName>
        <active>false</active>
        <errorConditionFormula>IF( 
AND( 
ISCHANGED(Date_closed__c), 
Section__r.Group__r.RecordType.Name != &apos;Draft&apos;), 
TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Date_closed__c</errorDisplayField>
        <errorMessage>You can only close a section product link via a draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Date_cannot_be_before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>if( Start_Date__c  &gt;   Date_closed__c  ,true,false)</errorConditionFormula>
        <errorMessage>Closed Date cannot be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_required_if_Date_closed</fullName>
        <active>true</active>
        <errorConditionFormula>if( ISNULL(Start_Date__c ) &amp;&amp;  !ISNULL(Date_closed__c) ,true,false)</errorConditionFormula>
        <errorMessage>Start date is required if Date Closed is populated</errorMessage>
    </validationRules>
</CustomObject>